--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,9 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon App.js",
-    "dev": "nodemon App.js",
-    "build":"cd client && npm install && npm run build"
+    "start": "node App.js", 
+    "dev": "nodemon App.js", 
+    "build": "cd ../frontend && npm install && npm run build" 
   },
   "keywords": [],
   "author": "",
