--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "App.js",
+  "scripts": {
+    "start": "node App.js",
+    "dev": "nodemon App.js",
+    "build": "cd ../frontend && npm install && npm run build"
+  },
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -8,16 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
-    "multer": "^2.0.2",
-    "path": "^0.12.7"
-  },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "App.js",
-  "scripts": {
-    "start": "node App.js",
-    "dev": "nodemon App.js",
-    "build": "cd ../frontend && npm install && npm run build"
+    "multer": "^2.0.2"
   },
   "keywords": [],
   "author": "",
