--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "start": "node App.js",
     "dev": "nodemon App.js",
     "build": "cd ../frontend && npm install && npm run build",
-    "postinstall": "npm run build"   // ✅ Runs React build on Render automatically
+    "postinstall": "npm run build"   
   },
   "dependencies": {
     "axios": "^1.11.0",
